<resources>
    <string name="app_name">SecurityKelautan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pengawasan_icon">pengawasan icon</string>
    <string name="observe">Observe</string>
    <string name="report">report</string>
    <string name="profile">profile</string>
    <string name="lapor">Lapor</string>
    <string name="add_btn">add_btn</string>
    <string name="selesai">Selesai</string>
    <string name="terjadi_pemajakan_kapal_didaerah_selatan_somalia">Terjadi pemajakan kapal didaerah selatan somalia</string>
    <string name="pantai_selatan_somalia">Pantai Selatan Somalia</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="masukan_username">masukan username</string>
    <string name="masukan_password">masukan password</string>
    <string name="continue111">continue</string>
    <string name="login">Login</string>
    <string name="pantai_selatan_somaliaaa">Pantai Selatan Somalia</string>
    <string name="terjadi_pemajakan_kapal_didaerah_selatan_somaliaas">Terjadi pemajakan kapal didaerah selatan somalia</string>
    <string name="sedang_diproses">Sedang diproses</string>
    <string name="male">Male</string>
    <string name="natar_bandar_lampung">Natar, Bandar Lampung</string>
    <string name="nelayan">Nelayan</string>
    <string name="riwayat_laporan">Riwayat Laporan</string>
    <string name="desc_bajak">desc_bajak</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="continuewefwef">continue</string>
    <string name="registersdasd">Register</string>
    <string name="assdsa">Masukan Confirm Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="masukan_usernamesads">masukan username</string>
    <string name="passwordsd">Password</string>
    <string name="assaas">Username</string>
    <string name="asadas">masukan password</string>
</resources>