<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="137dp"
        android:background="@drawable/blueprofile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="409dp"
        android:layout_height="592dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="192dp"
            android:background="@drawable/radius_card"
            android:padding="10dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:backgroundTint="#E2E4F3">

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/pantai_selatan_somaliaaa"
                app:layout_constraintBottom_toTopOf="@+id/textView20"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="282dp"
                android:layout_height="36dp"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/desc_bajak"
                android:text="@string/terjadi_pemajakan_kapal_didaerah_selatan_somaliaas"
                app:layout_constraintBottom_toTopOf="@+id/textView21"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:background="@drawable/radius_card"
                android:backgroundTint="@color/blue"
                android:padding="5dp"
                android:text="@string/sedang_diproses"
                android:textColor="@color/white"
                android:textSize="11sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout4"
            android:layout_width="160dp"
            android:layout_height="173dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout55"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="80dp"
            android:background="@drawable/radius_card"
            android:padding="10dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout5"
            tools:backgroundTint="#E2E4F3">

            <TextView
                android:id="@+id/textView199"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/pantai_selatan_somalia"
                app:layout_constraintBottom_toTopOf="@+id/textView209"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView209"
                android:layout_width="282dp"
                android:layout_height="36dp"
                android:layout_marginStart="16dp"
                android:text="@string/terjadi_pemajakan_kapal_didaerah_selatan_somalia"
                app:layout_constraintBottom_toTopOf="@+id/textView219"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView219"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:background="@drawable/radius_card"
                android:backgroundTint="@color/blue"
                android:padding="5dp"
                android:text="@string/selesai"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="66dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/radius_card"
            android:backgroundTint="@color/blue"
            android:padding="5dp"
            android:text="@string/male"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout4" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/radius_card"
            android:padding="5dp"
            android:text="@string/natar_bandar_lampung"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@+id/textView15"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout4"
            tools:backgroundTint="@color/blue" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="44dp"
            android:background="@drawable/radius_card"
            android:backgroundTint="@color/blue"
            android:padding="5dp"
            android:text="@string/nelayan"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout4" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/riwayat_laporan"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView16" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>